<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_png"
    tools:context=".ZikrCounterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/zikr_counter"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCount"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/initial_count"
        android:textColor="@color/black"
        android:textSize="96sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/btncount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btncount"
        android:layout_width="200dp"
        android:layout_height="111dp"
        android:text="@string/count"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:backgroundTint="@color/sage_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncount">

        <Button
            android:id="@+id/btn_plus_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+10"
            android:textColor="@color/black"
            app:backgroundTint="@color/sage_green" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/sage_green" />

        <Button
            android:id="@+id/btn_plus_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+100"
            android:textColor="@color/black"
            app:backgroundTint="@color/sage_green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>